--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
 
             <div class="space-x-6 text-gray-700">
                 <a asp-controller="Home" asp-action="Index" class="hover:text-green-700">Home</a>
+                <a asp-controller="Dashboard" asp-action="Index" class="hover:text-green-700">Dashboard</a>
                 <a asp-controller="Home" asp-action="Privacy" class="hover:text-green-700">Privacy</a>
             </div>
         </nav>
