--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,3 +6,10 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<form asp-controller="Checkout" asp-action="Create" method="post">
+    <input type="hidden" name="productId" value="1" />
+    @Html.AntiForgeryToken()
+    <button type="submit">Buy Now</button>
+</form>
+
