--- a/Views/Shared/_ProductCard.cshtml
+++ b/Views/Shared/_ProductCard.cshtml
@@ -1,4 +1,4 @@
-﻿@model SwipSwapMarketplace.Models.Product
+﻿@model SwipSwapMVC.Models.Product
 
 <div class="product-card shadow-lg rounded-xl p-4 hover:shadow-2xl transition-all cursor-pointer" onclick="openModal(@Model.ProductId)">
     <img src="@Model.ImageUrl" class="w-full h-48 object-cover rounded-md" />
