Finalized integration of login with rest of code

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model SwipSwapAuth.ViewModels.RegisterViewModel
+﻿@model SwipSwapMVC.Models.User;
 
 <div class="auth-wrapper">
     <div class="auth-card">
