--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -9,15 +9,18 @@
 <div class="space-y-6">
 
     <!-- Search Bar -->
-    <div class="flex items-center gap-2">
-        <input type="text"
+    <form asp-action="Index" method="get"  class="flex items-center gap-2">
+        <input 
+               name="search"
+               value="@ViewBag.Search"
+               type="text"
                placeholder="Search for products..."
                class="w-full px-4 py-2 border rounded-lg shadow-sm focus:ring-2 focus:ring-green-600 focus:outline-none" />
 
         <button class="px-6 py-2 bg-green-700 text-white rounded-lg shadow hover:bg-green-800 transition">
             Search
         </button>
-    </div>
+    </form>
 
     <!-- Category Buttons -->
     <div class="flex flex-wrap gap-3">
