--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,5 +1,9 @@
 ﻿@model SwipSwapMVC.Models.User;
 
+@{
+    Layout = "_AuthLayout";
+}
+
 <div class="auth-wrapper">
     <div class="auth-card">
         <h2 class="auth-title">Create Account</h2>
