--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
             <div class="space-x-6 text-gray-700">
                 <a asp-controller="Home" asp-action="Index" class="hover:text-green-700">Home</a>
-                <a asp-controller="Dashboard" asp-action="Index" class="hover:text-green-700">Dashboard</a>
+                <a asp-controller="Dashboard" asp-action="Index" class="hover:text-green-700">List Products</a>
                 <a asp-controller="Account" asp-action="Login" class="hover:text-green-700">Logout</a>
             </div>
         </nav>
