--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 
-<body class="bg-gray-50 text-gray-900" style="background-color: #F6EFD8">
+<body class="bg-gray-50 text-gray-900 min-h-screen" style="background-color: #F6EFD8">
 
     <!-- NAVBAR -->
     <header class="border-b shadow-sm">
