Implemented dark mode

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -76,7 +76,7 @@
 @section Modals {
     @foreach (var product in Model)
     {
-        <div id="product-@product.ProductId" class="product-modal">
+        <div id="product-@product.ProductId" class="product-modal dark:bg-gray-800 border dark:border-gray-700">
             <div class="product-modal-content relative pt-10 z-10">
                 <a href="#" class="product-modal-close absolute top-4 right-4 text-2xl font-bold z-50">✕</a>
 
